--- a/config/routes/biba_route2.yaml
+++ b/config/routes/biba_route2.yaml
@@ -2,12 +2,13 @@
 tasks:
 
   obezd_govna:
-    - call: AdjustOn
+    - call: AdjustOff
     - change_cost: 70
     - score: 4                  # ставим статуэтку и витрину
     #- move: 1.7/0.61/0
     #- sleep: 0.5
     - move: 1.7/0.61/-1.047  # фишки больше не мешают 
+    - call: AdjustOn
 
   get_flipped: 
     - move: 1.68/1/-1.047
