--- a/config/routes/boba_route1.yaml
+++ b/config/routes/boba_route1.yaml
@@ -2,9 +2,11 @@
 tasks:
 
   za_statuetkoi:
+    - call: AdjustOff
     - change_cost: 70
     - call: NeNadoPlitka
     - move : 1/2.6/0.23
+    - call: AdjustOn
     - change_cost: 10
     - move : 0.49/2.58/0.2
     - sleep: 0.5
