--- a/config/routes/boba_route2.yaml
+++ b/config/routes/boba_route2.yaml
@@ -4,7 +4,9 @@ tasks:
   za_statuetkoi:
     - change_cost: 70
     - call: NeNadoPlitka
+    - call: AdjustOff
     - move : 1/0.44/1.8
+    - call: AdjustOn
     - change_cost: 10
     - move : 0.49/0.42/1.812
     - sleep: 0.5
