--- a/config/routes/biba_test1.yaml
+++ b/config/routes/biba_test1.yaml
@@ -14,6 +14,7 @@ tasks: #move: x/y/th
     - change_cost: 90
   top_right: 
     - move: 1.43/2.78/-0.53
+  kek:  
     - move: 1.62/2.6/-0.53
     - move: 1.43/2.78/-0.53
   start:
