--- a/config/routes/biba_route1.yaml
+++ b/config/routes/biba_route1.yaml
@@ -111,5 +111,7 @@ tasks:
     - route_stop: epics
 interrupts:              
   end_inter:
-    - interrupt_condition: timers/main/99
+    - interrupt_condition: timers/main/96
+    - change_cost: 0
     - call: PumpOff
+    - route_stop: epics
