--- a/config/routes/boba_route1.yaml
+++ b/config/routes/boba_route1.yaml
@@ -3,11 +3,9 @@ tasks:
 
   za_statuetkoi:
     - call: AdjustOff
-    - change_cost: 70
     - call: NeNadoPlitka
     - move : 1/2.6/0.23
     - call: AdjustOn
-    - change_cost: 10
     - move : 0.49/2.58/0.2
     - sleep: 0.5
     - move : 0.49/2.58/0.2
@@ -28,7 +26,6 @@ tasks:
 
   sgruz:
     - move: 1.6/2.84/-2.10  
-    - change_cost: 90
     - move: 1.82/2.84/-2.10   
     - call : MicroArmHalf
     - sleep: 0.5
@@ -125,8 +122,12 @@ interrupts:
     - interrupt_condition: izmerenie5/call/1/red
     - interrupt_condition: izmerenie6/call/1/red
     - call: NeNadoPlitka
-  end_inter:
+  park_inter:
     - interrupt_condition: timers/main/96
+    - change_cost: 70
+    - move: 0.45/1.82/2.09
+  end_inter:
+    - interrupt_condition: timers/main/99
     - change_cost: 0
     - call: PumpOff
     - route_stop: epic
