--- a/config/routes/boba_route1.yaml
+++ b/config/routes/boba_route1.yaml
@@ -90,7 +90,7 @@ tasks:
    - call: Ohms
    - sleep: 0.8
 
-  Parkovka:
+  parkovka:
    - move: 0.45/1.82/2.09
    - call: PumpOff
    - route_stop: epic
@@ -126,6 +126,12 @@ interrupts:
     - interrupt_condition: timers/main/96
     - change_cost: 70
     - move: 0.45/1.82/2.09
+    - condition:
+      - if: parkovka/move/0/done
+      - do: 
+        - log: E:Already in base!
+      - else:
+        - score: 20  
   end_inter:
     - interrupt_condition: timers/main/99
     - change_cost: 0
