--- a/config/routes/biba_route1.yaml
+++ b/config/routes/biba_route1.yaml
@@ -100,7 +100,13 @@ interrupts:
   park_inter:
     - interrupt_condition: timers/main/96
     - change_cost: 70
-    - move: 0.74/2.26/1.375         
+    - move: 0.74/2.26/1.375       
+    - condition:
+      - if: parkovka/move/0/done
+      - do: 
+        - log: E:Already in base!
+      - else:
+        - score: 20  
   end_inter:
     - interrupt_condition: timers/main/99
     - change_cost: 0
