--- a/config/routes/boba_route1.yaml
+++ b/config/routes/boba_route1.yaml
@@ -2,9 +2,11 @@
 tasks:
 
   za_statuetkoi:
-    - call: AdjustOff
+    - call: AdjustOn
     - call: NeNadoPlitka
+    - change_cost: 50
     - move : 1/2.6/0.23
+    - change_cost: 8
     - call: AdjustOn
     - move : 0.49/2.58/0.2
     - sleep: 0.5
@@ -94,7 +96,7 @@ tasks:
    - move: 0.45/1.82/2.09
    - call: PumpOff
    - route_stop: epic
-   
+
 interrupts:
   flip!:
     - interrupt_condition: izmerenie0/call/1/purple
