--- a/config/routes/boba_route1.yaml
+++ b/config/routes/boba_route1.yaml
@@ -129,12 +129,13 @@ interrupts:
     - interrupt_condition: timers/main/96
     - change_cost: 70
     - move: 0.45/1.82/2.09
-    - condition:
-      - if: parkovka/move/0/done
-      - do: 
-        - log: E:Already in base!
-      - else:
-        - score: 20  
+    - score: 20  
+    # - condition:
+    #   - if: parkovka/move/0/done
+    #   - do: 
+    #     - log: E:Already in base!
+    #   - else:
+    #     - score: 20  
   end_inter:
     - interrupt_condition: timers/main/99
     - change_cost: 0
