--- a/config/routes/boba_route2.yaml
+++ b/config/routes/boba_route2.yaml
@@ -40,7 +40,9 @@ tasks:
     - move: 1.6/0.23/-2.10
     - call: MicroArmDown
     
-
+  damn:
+    - move: 0.4/0.84/0
+    - call: PumpOff
   # izmerenie0:
   #   - move: 0.4/0.68/2.09
   #   - call: PumpOff
