--- a/config/routes/biba_route2.yaml
+++ b/config/routes/biba_route2.yaml
@@ -103,7 +103,7 @@ tasks:
   parkovka:
     - change_cost: 70
     - move: 0.74/0.78/-3.43
-    #- score: 20 
+    - score: 20 
     - route_stop: epics
 interrupts:              
   park_inter:
