--- a/config/routes/biba_route1.yaml
+++ b/config/routes/biba_route1.yaml
@@ -96,7 +96,7 @@ tasks:
   parkovka:
     - change_cost: 70
     - move: 0.74/2.26/1.375
-    #- score: 20 
+    - score: 20 
     - route_stop: epics
 interrupts:    
   park_inter:
