--- a/config/routes/calls/calls_dict.yaml
+++ b/config/routes/calls/calls_dict.yaml
@@ -29,6 +29,10 @@
     - "servos_service":
       - "num": 0
       - "state": 35
+  - "ArmBokovaya":
+    - "servos_service":
+      - "num": 0
+      - "state": 33
    ##
   - "MicroArmUp":
     - "servos_service":
