--- a/config/routes/biba_route2.yaml
+++ b/config/routes/biba_route2.yaml
@@ -79,16 +79,18 @@ tasks:
   bokovaia1:
     - move: 0.77/0.44/-2.56
     - move: 0.77/0.44/-2.56
-    - call: ArmHalfDown
+    - call: ArmBokovaya
     - sleep: 0.4
     - call: PumpOn
     - move: 0.77/0.27/-2.56
     - sleep: 0.3
-    - call: ArmMegaUp
+    - call: ArmHalfUp
     - sleep: 0.3
+    - call: ArmUp
     - score: 1
     - move: 0.77/0.44/-2.56
     - move: 0.7/0.53/-3
+    - call: ArmMegaUp
     - sleep: 0.3
     - move: 0.5/0.53/-3.44
     - sleep: 0.2
@@ -102,7 +104,7 @@ tasks:
 
   parkovka:
     - change_cost: 70
-    - move: 0.74/0.78/-3.43
+    - move: 0.74/0.78/-3.43 
     - score: 20 
     - route_stop: epics
 interrupts:              
