--- a/config/routes/biba_route1.yaml
+++ b/config/routes/biba_route1.yaml
@@ -99,6 +99,7 @@ tasks:
     - change_cost: 70
     - move: 0.74/2.26/1.375
     - score: 20 
+    - call: PumpOff
     - route_stop: epics
 interrupts:    
   park_inter:
