--- a/config/routes/boba_route1.yaml
+++ b/config/routes/boba_route1.yaml
@@ -45,11 +45,16 @@ tasks:
   damn:
     - move: 0.8/2.55/0
     - sleep: 0.5
-    - move: 0.4/2.39/0
+    - move: 0.4/2.23/0
     - sleep: 0.5
-    - move: 0.4/2.39/2.09
     - call: PumpOff
-
+  recover:
+    - call: AdjustOff
+    - move: 0.16/2.23/0
+    - call: AdjustOn
+    - move: 0.3/2.23/1.3
+    - sleep: 1
+    - move: 0.3/2.23/2.09
   # izmerenie0:
   #   - move: 0.3/2.405/2.09
   #   - move: 0.193/2.405/2.09
