--- a/config/routes/biba_route2.yaml
+++ b/config/routes/biba_route2.yaml
@@ -111,8 +111,9 @@ tasks:
     - sleep: 0.2
     - move: 0.315/0.315/-3.4
     - move: 0.315/0.315/-3.4
+    - call: ArmUp
     - call: PumpOff
-    - sleep: 0.2
+    - sleep: 0.1
     - call: ValveOn
     - sleep: 0.2
     - score: 5
