--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -2,6 +2,7 @@
 global_planer/maximum_cost: 8 #Most important
 local_planer/cost_threshhold: 35 #100 are walls, then there is inflation (Represents median of cost of points)
 local_planer/max_cost_increase: 2.5 # x times
+local_planer/timeout_on_fail: 1 #secs
 #speed coeffs
 local_planer/full_path_coeff_dist: 80 #dist from target in cells at which robot goes full spd (the lower the faster)
 local_planer/static_coeff:  1
