--- a/config/routes/biba_route2.yaml
+++ b/config/routes/biba_route2.yaml
@@ -19,7 +19,7 @@ tasks:
     #- move: 1.68/1/-1.047
     - move: 1.68/1.34/-1.047
     - call: ArmHalfDown
-    - sleep: 0.4
+    - sleep: 0.2
     - call: PumpOn
     - move: 1.78/1.34/-1.047
     - sleep: 0.2
@@ -33,7 +33,7 @@ tasks:
     - call: PumpOff
     - sleep: 0.2
     - call: ValveOn
-    - sleep: 0.3
+    #- sleep: 0.3
     
     - score: 3
     - call: ValveOff
@@ -46,7 +46,7 @@ tasks:
     - move: 1.78/1.34/-1.047  
     - move: 1.68/1.34/-1.047             #ebashim do 2 fihki
     - call: ArmHalfDown
-    - sleep: 0.4
+    - sleep: 0.2
     - call: PumpOn
     - move: 1.78/1.34/-1.047                #  вроде норм подьезд
     - sleep: 0.2             
@@ -94,7 +94,7 @@ tasks:
     - move: 0.77/0.44/-2.56
     - move: 0.77/0.44/-2.56
     - call: ArmBokovaya
-    - sleep: 0.4
+    - sleep: 0.2
     - call: PumpOn
     - move: 0.77/0.27/-2.56
     - sleep: 0.3
