--- a/config/routes/boba_route2.yaml
+++ b/config/routes/boba_route2.yaml
@@ -14,7 +14,9 @@ tasks:
     - call : MicroArmHalf
     - call: PumpOn
     - sleep: 0.2
+    - change_cost: 5
     - move: 0.365/0.345/1.8
+    - change_cost: 8
     - call: MicroArmUp
 
   zamena:
